style.css
/*
Theme Name: Made I.T.
Theme URI: https://www.madeit.be
Author: Made I.T.
Author URI: https://wordpress.org/
Description: 
Version: 2.0.2.1
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: madeit
Domain Path: /languages/
Tags:

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/

/* WP-Members */
body {
  min-height: 100vh; 
}

.flex-grow {
   flex: 1;
   margin-top: 60px;
}

.wp-block-image .aligncenter {
    margin: 0 auto;
}

#wpmem_reg, #wpmem_login {
    color: inherit !important;
    font-family: inherit !important;
}

/* Cookie */
#cookie_directive_container {
	border-bottom: 0;
}

#cookie_directive_container.fixed-top {
	maring-top: 70px;
}

#cookie_directive_container .text-muted { 
    color: #4C5257 !important;
}

/* Spacing */
.m-6 {
  margin: 5rem !important;
}

.mt-6,
.my-6 {
  margin-top: 5rem !important;
}

.mr-6,
.mx-6 {
  margin-right: 5rem !important;
}

.mb-6,
.my-6 {
  margin-bottom: 5rem !important;
}

.ml-6,
.mx-6 {
  margin-left: 5rem !important;
}


.m-7 {
  margin: 8rem !important;
}

.mt-7,
.my-7 {
  margin-top: 8rem !important;
}

.mr-7,
.mx-7 {
  margin-right: 8rem !important;
}

.mb-7,
.my-7 {
  margin-bottom: 8rem !important;
}

.ml-7,
.mx-7 {
  margin-left: 8rem !important;
}

/* WooCommerce */
.entry-content {
    width: 100%;
}

/* Gutenberg */
.aligncenter {
	
}

.row > .row {
	margin: 0;
}

.alignleft {
    float: left;
}
.alignright {
    float: right;
}

/* Header */
.single-featured-image-header {
	position: relative;
}
.single-featured-image-header .site-branding-text {
	position: absolute;
	top: 15%;
	left: 10%;
}
.single-featured-image-header .site-branding-text .site-title, .single-featured-image-header .site-branding-text .site-description {
	color: #FFF;
	display: none;
}

@media (min-width: 576px) {
    .single-featured-image-header .site-branding-text .site-title, .single-featured-image-header .site-branding-text .site-description {
        display: block;
    }
}

@media (min-width: 768px) {
    .single-featured-image-header .site-branding-text .site-title, .single-featured-image-header .site-branding-text .site-description {
        display: block;
    }
}

@media (min-width: 992px) {
    .single-featured-image-header .site-branding-text .site-title, .single-featured-image-header .site-branding-text .site-description {
        display: block;
    }
}

@media (min-width: 1200px) {
    .single-featured-image-header .site-branding-text .site-title, .single-featured-image-header .site-branding-text .site-description {
        display: block;
    }
}

.site-header.no-front-page .wp-custom-header {
	height: 40vh;
	overflow: hidden;
}
.site-header.no-front-page img {
	margin-top: -40vh;
}
.wp-custom-header {
    width: 100%;
}

/* Social style */
.social-navigation {
    font-size: 16px;
    font-size: 1rem;
    margin-bottom: 1em;
}
.social-navigation ul {
    list-style: none;
    margin-bottom: 0;
    margin-left: 0;
}
.social-navigation li {
    display: inline;
}
.social-navigation a {
    background-color: #767676;
    -webkit-border-radius: 40px;
    border-radius: 40px;
    color: #fff;
    display: inline-block;
    height: 40px;
    margin: 0 1em 0.5em 0;
    text-align: center;
    width: 40px;
}
.screen-reader-text {
    clip: rect(1px, 1px, 1px, 1px);
    height: 1px;
    overflow: hidden;
    position: absolute !important;
    width: 1px;
    word-wrap: normal !important;
}

.icon {
    display: inline-block;
    fill: currentColor;
    height: 1em;
    position: relative;
    top: -0.0625em;
    vertical-align: middle;
    width: 1em;
}

svg:not(:root) {
    overflow: hidden;
}

.social-navigation .icon {
    height: 16px;
    top: 12px;
    width: 16px;
    vertical-align: top;
}

/* Hide brand name when custom logo is enabled */
.wp-custom-logo .navbar-brand {
    display: none;
}

/* Fix images */
img {
    max-width: 100%;
    height: auto;
}

/* Fix edit icon on customizer */
#wp-custom-header .customize-partial-edit-shortcut {
    margin-top: 56px;
}

/*  panels */
.madeit-panel {
    overflow: hidden;
    position: relative;
    width: 100%;
}
.panel-image {
    background-position: center center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    background-size: cover;
    position: relative;
}

@media screen and (min-width: 48em) {
    .panel-image {
        height: 100vh;
        max-height: 1200px;
    }
    
    .background-fixed .panel-image {
        background-attachment: fixed;
    }
}


.madeit-panel .customize-partial-edit-shortcut, .madeit-panel .widget .customize-partial-edit-shortcut {
    left: 35px;
}

.highlight-front-sections.madeit-customizer.madeit-front-page .madeit-panel:after {
    border: 2px dashed #0085ba;
    bottom: 1em;
    content: "";
    display: block;
    left: 1em;
    position: absolute;
    right: 1em;
    top: 1em;
    z-index: 1;
}

.madeit-panel-title {
	margin: 50px;
	display: block;
}

/* Fix 2 or 1 column */
.two-column-row.row {
	flex-basis: auto !important;
}

/* Fix link color on primary background */
.bg-primary a {
    color: #ffF;
}


/* Menu */
.navbar a {
    color: #222;
    font-weight: 600;
    -webkit-transition: color 0.2s;
    transition: color 0.2s;
}
.navbar a:hover {
    color: #bbb;
}
.navbar .active > a {
    color: #767676;
}
.navbar-toggler .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 0px;
    background-color: #222;
}
.navbar-toggler .icon-bar+.icon-bar {
    margin-top: 4px;
}
.dropdown-menu {
    max-height: 70vh;
    overflow-y: auto;
}
@media (max-width: 990px) {
    .navbar.fixed-top {
        overflow-y: auto;
        max-height: 100vh;
    }
}

/* Footer */
.site-footer {
    border-top: 1px solid #eee;
}
.site-info a {
    color: #666;
}

/* Lightbox */
#lightbox-modal .modal-content {
    background-color: transparent !important;
}
/* ... */

